--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,29 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
   color: blue;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 2.8rem;
+  margin: 0;
+  padding: 0;
+}
+
+#container {
+  width: 70%;
+  text-align: left;
+  border: 1px solid #080808;
+  margin: 0 auto;
+}
+
+#container h1 {
+  font-size: 3.0rem;
 }
