--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 body {
   color: blue;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: monospace;
   font-size: 2.8rem;
   margin: 0;
   padding: 0;
