--- a/css/style.css
+++ b/css/style.css
@@ -9,20 +9,26 @@ html {
 }
 
 body {
-  color: red;
+  background-color: #1e1f24;
+  color: #333;
   text-align: center;
-  font-family: monospace;
-  font-size: 2.8rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.6rem;
   margin: 0;
   padding: 0;
 }
 #cabecera {
-  background-color: purple;
+  background-color: #37488b;
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
   color: white;
   font-weight: bold;
   margin: 0;
   padding: 0.5em;
+}
+
+#cabecera #logo {
+  width: 40px;
+  vertical-align: middle;
 }
 
 #cabecera #tagline {
@@ -33,15 +39,24 @@ body {
 
 #container {
   width: 70%;
+  padding: 0;
   text-align: left;
-  border: 1px solid #080808;
+  border: 1px solid #ddd;
   margin: 0 auto;
 }
 
 #container h1 {
-  font-size: 3.0rem;
+  font-size: 2.0rem;
+  color: green;
 }
 
 #container #post {
-  margin: 100px;
+  margin: 0px;
+}
+
+#post {
+  background: white;
+  padding: 1em;
+  color: black;
+  font-size: 1.6rem;
 }
