--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ html {
 }
 
 body {
-  color: red;
   text-align: center;
   font-family: monospace;
   font-size: 2.8rem;
@@ -32,7 +31,7 @@ body {
 }
 
 #container {
-  width: 70%;
+  width: 100%;
   text-align: left;
   border: 1px solid #080808;
   margin: 0 auto;
@@ -40,8 +39,13 @@ body {
 
 #container h1 {
   font-size: 3.0rem;
+  color: green;
 }
 
-#container #post {
-  margin: 100px;
+#footer {
+  background-color: #777;
+  text-align: center;
+  font-size: 1.8rem;
+  color: white;
+  padding: 0.5em;
 }
