ultima correccion de estilos

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
   width: 100%;
   text-align: left;
   border: 1px solid #080808;
-  margin: 0 auto;
+  margin-top: 20px;
 }
 
 #container h1 {
