--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,11 @@ body {
   color: black;
   font-size: 1.6rem;
 }
+
+#footer {
+  background-color: #777;
+  text-align: center;
+  font-size: 1.8rem;
+  color: white;
+  padding: 0.5em;
+}
